--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,11 @@
 
     <!-- ✅ 스크롤 시 Backdrop Blur Header -->
     <header class="sticky-header">
-        <div class="logo">{{ site.title }}</div>
+        <div class="logo">
+            <a href="{{ " /" | relative_url }}" style="color: inherit; text-decoration: none;">
+                {{ site.title }}
+            </a>
+        </div>
         <nav>
             <a href="{{ " /" | relative_url }}" class="nav-link"
                 style="color:#fff; margin-right:1rem; text-decoration:none;">Home</a>
